@@ -57,7 +57,7 @@ public class SecurityConfig {
         configuration.setAllowedOriginPatterns(List.of("*")); // Dev flexibility
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
-        configuration.setExposedHeaders(List.of("Content-Disposition"));
+        configuration.setExposedHeaders(Arrays.asList("Content-Disposition", "x-original-size-bytes", "x-compressed-size-bytes", "x-reduction-percent"));
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
